# funcnodes_span

./: .gitignore  .pre-commit-config.yaml  THIRD_PARTY_NOTICES.md  pyproject.toml
.funcnodes/: config.json
.funcnodes/workers/: worker_819786f45cc247a7b086ce71d030df11.json  worker_demoworker.json
.funcnodes/workers/worker_819786f45cc247a7b086ce71d030df11/: main.py  nodespace.json  pyproject.toml
.funcnodes/workers/worker_demoworker/: nodespace.json
funcnodes_span/: __init__.py  baseline.py  fitting.py  normalization.py  peak_analysis.py  smoothing.py
reports/: mypy-baseline.txt
src/funcnodes_span/: peak_analysis.py  smoothing.py
tests/: all_nodes_test_base.py  test_all_nodes.py  test_all_nodes_pytest.py  test_baseline.py  test_curves.py  test_fit.py  test_normalization.py  test_peak_analysis.py  test_peaks.py  test_smoothing.py
